Support importing functions and constants from other namespaces

Summary:
T6810
Add support for syntax `use const xxx\xxx` and `use function xxx\xxx`

BUG: 408609
FIXED-IN: 5.5.0

Reviewers: pprkut

Reviewed By: pprkut

Subscribers: pprkut, kdevelop-devel

Tags: #kdevelop

Differential Revision: https://phabricator.kde.org/D25956